# MultidisciplinaryProject

./: .gitignore  .gitlab-ci.yml  LABGROUP.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py
group03/: EmergencyBrakeCheck.py  FarmerInterface.py  FiniteStateMachine.py  GripperManager.py  NavPlanner.py  SpinNode.py  __init__.py
group03/AppleDetection/: apple_detection_node.py  apple_detection_publisher.py  base_cam_subscriber.py  gripper_cam_subscriber.py
launch/: fsm.launch.py  full_start.launch.py  gazebo_test_world.launch.py  robot_navigation.launch.py  self_localization.launch.py
params/: mirte_nav2_params.yaml  mirte_nav2_params_90degree.yaml  mirte_nav2_params_diff.yaml  nav2_params.yaml  spin_straight_primitives.json
resource/: listen_to_fsm_example.py
resource/old_scripts/: map_online.launch.py  self_localize.launch.py
resource/yolo_training/: yolo_train_basket.ipynb
resource/yolo_training/runs/train/basket_06-06-14-22/: args.yaml  results.csv
resource/yolo_training/runs/train/red_green_apples_06-05-12-20/: args.yaml
resource/yolo_training/runs/train/red_green_apples_06-05-12-22/: args.yaml
resource/yolo_training/runs/train/red_green_apples_06-05-12-23/: args.yaml
resource/yolo_training/runs/train/red_green_apples_06-05-12-26/: args.yaml
resource/yolo_training/runs/train/red_green_apples_06-06-14-16/: args.yaml
test/: launchtest.py  test.py
worlds/: test_gazebo_world.world
worlds/empty_map/: map.yaml
worlds/hallway_map/: map.pgm  map.yaml
worlds/test_gazebo_world_map/: map.pgm  map.yaml
